Don't trigger qBound assert in QExpandingLineEdit

Ignore the original width if it's larger than maximum.

Fixes: QTBUG-104383
Fixes: QTBUG-104565
Change-Id: Id86d4f5bd1d50304d95c4711f1989f4dae416b69
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 9fcd5f0790fd01307cfece96d82df21c787fa5b3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>